<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">МТС Паром</string>
    <string name="mount_sdcard">No sd card</string>
    <string name="upload_uri">http://korniltsev.ru/mts/upload</string>
    <string name="json_events_uri">
        https://raw.github.com/gist/3298043/8e2c21a4ad20e852d75e88d1be22df7e7ba4057f/events.json
    </string>
    <string name="make_pick_from_gallery">Pick from gallery</string>
    <string name="make_photo">Make photo</string>
    <string name="tab_events">События</string>
    <string name="tab_photo">Фотографии</string>
    <string name="tab_achieve">Достижения</string>
    <string name="timelineLabel">Time</string>
    <string name="label_share">Поделиться</string>
    <string name="label_delete">Удалить</string>
    <string name="debug_name_date">19:00 Марафон коктейлей</string>
    <string name="debug_place">Ресторан у моря\nКонкурс мисс паром</string>
    <string name="debug_event_description">бесплатный второй коктейль, тетки и мужики крутота.\n
        бесплатный второй коктейль, тетки и мужики крутота.
    </string>
    <string name="go">Я пойду</string>
    <string name="do_not_go">Don\'t go</string>
    <string name="my_photos">Мои фото</string>
    <string name="other_photos">Общие фото</string>
    <string name="leader_board">Рейтинг</string>
    <string name="anastasiya">Принцесса Анастасия</string>
    <string name="maria">Принцесса Мария</string>
    <string name="uploaded_photo">Фотография загружена</string>
    <string name="uploading_photo">Фотография загружается</string>
    <string name="debug_name">Заголовок</string>
    <string name="debug_message">Описание</string>
    <string name="debug_time">Время</string>
    <string name="when"><h1>20</h1>:00\n
        7 авг.
    </string>
    <string name="question">\?</string>
    <string name="visit_interesting">Посетите интересные места:</string>
    <string name="party_hard">Вечеринка 7:00</string>
    <string name="dance">Балл на корме</string>
    <string name="geometria">Geometria</string>
    <string name="mts">При поддержке МТС\n и St.Peterline</string>
    <string name="all_events">Все</string>
    <string name="my_events">Выбранные</string>
    <string name="not_my">Не выбранные события</string>
</resources>
