<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="#000000">
    <ImageView
            android:id="@+id/img_avatar"
            android:layout_alignParentLeft="true"
            android:layout_width="60dip"
            android:layout_centerVertical="true"
            android:layout_height="fill_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_debug_party"/>
    <TextView
            android:id="@+id/label_name"
            android:layout_toRightOf="@id/img_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debug_name"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"/>

    <TextView
            android:id="@+id/label_date"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textColor="#cfcfcf"
            android:text="@string/debug_time"
            android:padding="5dp"/>

    <TextView
            android:id="@+id/label_msg"
            android:layout_toRightOf="@id/img_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_name"
            android:layout_toLeftOf="@id/label_date"
            android:textColor="#cfcfcf"
            android:textSize="12dp"
            android:paddingLeft="5dp"
            android:text="@string/debug_message"/>

    <ImageView android:layout_below="@id/label_date"
               android:layout_alignParentRight="true"
               android:layout_width="20dip"
               android:layout_height="20dip"
               android:scaleType="fitEnd"
               android:paddingBottom="5dip"
               android:paddingRight="5dip"
               android:src="@drawable/ic_app_logo"/>

</RelativeLayout>